# ansible

./: .ansible-lint  .ansible-lint-ignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SIFT-2025-05-23.md  Vagrantfile  ansible.cfg  main.yml  refactor-2025-06-09.md  requirements.yml  todo.md  ui.html
.ansible/collections/ansible_collections/gnfzdz/archlinux/: FILES.json  MANIFEST.json  README.md  pyproject.toml
.ansible/collections/ansible_collections/gnfzdz/archlinux/playbooks/: install.yml
.ansible/collections/ansible_collections/gnfzdz/archlinux/plugins/filter/: disk.py
.ansible/collections/ansible_collections/gnfzdz/archlinux/roles/all/: README.md
.ansible/collections/ansible_collections/gnfzdz/archlinux/roles/aur/: README.md
.ansible/collections/ansible_collections/gnfzdz/archlinux/roles/aur_install/: README.md
.ansible/collections/ansible_collections/gnfzdz/archlinux/roles/aur_setup/: README.md
.ansible/collections/ansible_collections/gnfzdz/archlinux/roles/install/: README.md
.ansible/collections/ansible_collections/gnfzdz/archlinux/roles/install_prompt/: README.md
.ansible/collections/ansible_collections/gnfzdz/archlinux/roles/pacman/: README.md
.ansible/collections/ansible_collections/gnfzdz/archlinux/roles/pikaur/: README.md
.ansible/collections/ansible_collections/gnfzdz/network/: FILES.json  MANIFEST.json  README.md  pyproject.toml
.ansible/collections/ansible_collections/gnfzdz/network/meta/: runtime.yml
.ansible/collections/ansible_collections/gnfzdz/network/plugins/filter/: wifi.py
(+1019 files in other folders)
