[tool.poetry]
name = "Ansible-Gnfzdz-Network"
version = "2.0.0"
description = "An collection providing an opinionated set of configuration for a linux system's networking."
authors = ["Gregory Furlong <gnfzdz@fzdz.io>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.0.0"
#netaddr = "^0.8.0"

# dev
molecule = "^5.0"
ansible-lint = { version = "^6.9", markers = "platform_system != 'Windows'" }
molecule-plugins = {extras = ["containers","podman","vagrant"], version = "^23.4.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
